aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jlt__tests__jlt_lit_expr.snap
---
source: aya-assembly/src/parser/instructions/jlt.rs
expression: result
---
Instruction(
    JltLit(
        Address(
            HexLiteral(
                ByteOffset {
                    start: 7,
                    end: 11,
                },
            ),
        ),
        BinaryOp {
            lhs: HexLiteral(
                ByteOffset {
                    start: 16,
                    end: 20,
                },
            ),
            operator: Add,
            rhs: Register(
                ByteOffset {
                    start: 23,
                    end: 25,
                },
            ),
        },
    ),
)
