aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jlt__tests__jlt_lit_var.snap
---
source: aya-assembly/src/parser/instructions/jlt.rs
expression: result
---
Instruction(
    JltLit(
        Address(
            HexLiteral(
                ByteOffset {
                    start: 7,
                    end: 11,
                },
            ),
        ),
        Var(
            ByteOffset {
                start: 15,
                end: 18,
            },
        ),
    ),
)
