aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jlt__tests__jlt_reg.snap
---
source: aya-assembly/src/parser/instructions/jlt.rs
expression: result
---
Instruction(
    JltReg(
        Address(
            ByteOffset {
                start: 7,
                end: 11,
            },
        ),
        Register(
            ByteOffset {
                start: 14,
                end: 16,
            },
        ),
    ),
)
